# OctRobot

./: .gitignore  Makefile  QUICKSTART.md  README.md  host_test.py  setup.sh  west.yml
.github/prompts/: plan-flashStorageDemoWaypoints.prompt.md  plan-octrobotRobotArmFirmwareStack.prompt.md
app/: CMakeLists.txt  prj.conf
app/boards/: m5stack_atom_lite_esp32_procpu.overlay
app/include/: feetech_protocol.h  feetech_servo.h  forward_kinematics_poe.h  hal_flash.h  hal_gpio.h  hal_timer.h  hal_types.h  half_duplex_uart.h  host_comms.h  kinematics_math.h  matrix_exp.h  packet_protocol.h  robot_geometry.h  robot_types.h  servo_control.h  uart_console.h  utils.h
app/src/: main.c
app/src/common/: utils.c
app/src/comms/: host_comms.c  packet_protocol.c  uart_console.c
app/src/controller/: servo_control.c
app/src/drivers/: feetech_protocol.c  feetech_servo.c
app/src/hal/: hal_flash.c  hal_gpio.c  hal_timer.c  half_duplex_uart.c
app/src/kinematics/: forward_kinematics_poe.c  kinematics_math.c  matrix_exp.c  robot_geometry.c
boards/m5stack_atom_lite/: Kconfig.board  Kconfig.defconfig  board.cmake  m5stack_atom_lite-pinctrl.dtsi  m5stack_atom_lite.dts
boards/m5stack_atom_lite/doc/: index.rst
docs/: FK_TEST_README.md  FLASH_HAL_IMPLEMENTATION.md  HAL_LAYER.md  HAL_QUICKREF.md  OUT_OF_TREE.md  PHASE2_SUMMARY.md  PHASE3B_SUMMARY.md  PHASE3_SUMMARY.md  SERVO_DRIVER.md  SERVO_QUICKREF.md  phase3b_validation.md
docs/feetech/: Hexadecimal_instructions_generate_tables.xlsx
tests/kinematics/: CMakeLists.txt  prj.conf  testcase.yaml
tests/kinematics/src/: hal_flash_stub.c  test_forward_kinematics.c  test_kinematics_math.c  test_matrix_exp.c
validation/: conftest.py  requirements.txt  robot_config.yaml  test_fk_crossval.py
